@@ -2,13 +2,12 @@ package br.com.mateus.payflow.application.auth.service;
 
 import java.time.Duration;
 import java.time.Instant;
-import java.util.Arrays;
+import java.util.List;
 
-import javax.naming.AuthenticationException;
-
+import br.com.mateus.payflow.common.exception.auth.CredentialsInvalidsException;
+import br.com.mateus.payflow.common.exception.user.UserNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
@@ -17,7 +16,6 @@ import com.auth0.jwt.algorithms.Algorithm;
 
 import br.com.mateus.payflow.application.auth.dto.LoginResponseDTO;
 import br.com.mateus.payflow.application.auth.dto.UserLoginRequestDTO;
-import br.com.mateus.payflow.common.exception.ValidationException;
 import br.com.mateus.payflow.domain.user.model.UserEntity;
 import br.com.mateus.payflow.domain.user.repository.UserRepository;
 
@@ -25,15 +23,19 @@ import br.com.mateus.payflow.domain.user.repository.UserRepository;
 public class AuthService {
 
     @Value("${security.token.secret}")
-    private String secretKey;
+    public String secretKey;
+
+    private final UserRepository userRepository;
+
+    private final PasswordEncoder passwordEncoder;
 
     @Autowired
-    private UserRepository userRepository;
+    public AuthService(UserRepository userRepository, PasswordEncoder passwordEncoder) {
+        this.userRepository = userRepository;
+        this.passwordEncoder = passwordEncoder;
+    }
 
-    @Autowired
-    private PasswordEncoder passwordEncoder;
-
-    public LoginResponseDTO execute(UserLoginRequestDTO userLoginRequestDTO) throws AuthenticationException {
+    public LoginResponseDTO execute(UserLoginRequestDTO userLoginRequestDTO) {
         String identifier = userLoginRequestDTO.getLogin();
 
         UserEntity user = findUserByIdentifier(identifier);
@@ -41,14 +43,14 @@ public class AuthService {
         boolean isPasswordValid = passwordEncoder.matches(userLoginRequestDTO.getPassword(), user.getPassword());
 
         if (!isPasswordValid) {
-            throw new BadCredentialsException("Invalid credentials");
+            throw new CredentialsInvalidsException();
         }
 
         Algorithm algorithm = Algorithm.HMAC256(secretKey);
         var token = JWT.create()
                 .withIssuer("user_id")
                 .withExpiresAt(Instant.now().plus(Duration.ofHours(2)))
-                .withClaim("roles", Arrays.asList("USER"))
+                .withClaim("roles", List.of("USER"))
                 .withSubject(user.getId().toString())
                 .sign(algorithm);
 
@@ -58,10 +60,10 @@ public class AuthService {
     private UserEntity findUserByIdentifier(String identifier) {
         if (identifier.contains("@")) {
             return userRepository.findByEmail(identifier)
-                    .orElseThrow(() -> new ValidationException("User not found"));
+                    .orElseThrow(UserNotFoundException::new);
         } else {
             return userRepository.findByCpf(identifier)
-                    .orElseThrow(() -> new ValidationException("User not found"));
+                    .orElseThrow(UserNotFoundException::new);
         }
     }
 }
